--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pear"
+name = "pear-chat"
 version = "0.1.0"
 description = "P2P Terminal Chat - Decentralized chat application for local networks"
 readme = "README.md"
