--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pear-chat"
-version = "0.1.0"
+version = "0.1.2"
 description = "P2P Terminal Chat - Decentralized chat application for local networks"
 readme = "README.md"
 license = {text = "MIT"}
@@ -34,7 +34,10 @@ classifiers = [
     "Environment :: Console",
 ]
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "rich>=12.0.0",
+    "litellm>=1.0.0",
+]
 
 [project.optional-dependencies]
 dev = [
