--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ Repository = "https://github.com/gtarpenning/pear"
 "Bug Tracker" = "https://github.com/gtarpenning/pear/issues"
 
 [project.scripts]
-pear = "pear_cli:main"
+pear = "pear.pear_cli:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
